[gd_scene load_steps=5 format=3 uid="uid://bygmop6vopi43"]

[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.cutscene_graph/icons/icon_add.svg" id="1"]
[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorChoiceNode.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cmr3aolsr6l35" path="res://addons/hyh.cutscene_graph/editor/branches/EditorChoiceValue.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorGraphNodeBase.tscn" id="4"]

[node name="EditorChoiceNode" instance=ExtResource("4")]
offset_right = 540.0
offset_bottom = 376.0
title = "Choice"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.949219, 0.274384, 0.479997, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.813103, 0.957031, 0.299072, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.813103, 0.957031, 0.299072, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.813103, 0.957031, 0.299072, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("2")

[node name="HeaderContainer" type="MarginContainer" parent="." index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HorizontalLayout" type="HBoxContainer" parent="HeaderContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="HeaderContainer/HorizontalLayout" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default"

[node name="AddValueButton" type="Button" parent="HeaderContainer/HorizontalLayout" index="1"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("1")

[node name="ChoiceValue" parent="." index="1" instance=ExtResource("3")]
layout_mode = 2

[node name="ChoiceValue2" parent="." index="2" instance=ExtResource("3")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="HeaderContainer/HorizontalLayout/AddValueButton" to="." method="_on_AddValueButton_pressed"]
[connection signal="remove_requested" from="ChoiceValue" to="." method="_value_remove_requested" binds= [1]]
[connection signal="remove_requested" from="ChoiceValue2" to="." method="_value_remove_requested" binds= [2]]
